--- a/package.json
+++ b/package.json
@@ -7,8 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.46.0",
+    "datatables.net": "^2.0.0",
+    "datatables.net-dt": "^2.0.0",
+    "jquery": "^3.5.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.11",
     "smartwizard": "^6.0.6",
