--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.46.0",
+    "bootstrap": "^5.3.3",
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.1",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-jquery-plugin": "^1.1.7",
     "react-router-dom": "^6.22.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "router-dom": "^2.2.11",
     "smartwizard": "^6.0.6",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/datatables.net": "^1.10.28",
+    "@types/jquery": "^3.5.29"
   }
 }
