--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.46.0",
     "bootstrap": "^5.3.3",
+    "datatable": "^2.0.2",
     "datatables.net": "^2.0.0",
     "datatables.net-dt": "^2.0.0",
-    "jquery": "^3.5.1",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.1",
